* api: add new function "string_eval_expression"
* api: connect with IPv6 by default in hook_connect (with fallback to IPv4),
  shuffle list of hosts for a same address, add argument "retry" for
  hook_connect, move "sock" from hook_connect arguments to callback of
  hook_connect (task #11205)
* alias: give higher priority to aliases (2000) so that they take precedence
  over an existing command
* aspell: ignore self and remote nicks in private buffers
* aspell: add signal "aspell_suggest" (sent when new suggestions are displayed)
* aspell: add bar items "aspell_dict" (dictionary used on current buffer) and
  "aspell_suggest" (suggestions for misspelled word at cursor), add option
  aspell.check.suggestions (task #12061)
* aspell: fix creation of spellers when number of dictionaries is different
  between two buffers
* irc: fix display of actions (/me) when they are received from a relay client
  (in channel and private buffers) (bug #38027)
* irc: fix memory leak when updating modes of channel
* irc: add tags "irc_nick1_xxx" and "irc_nick2_yyy" in message displayed for
  command "NICK"
* irc: return git version in CTCP VERSION and FINGER by default, add "$git"
  and "$versiongit" in format of CTCP replies
* irc: read local variable "autorejoin" in buffer to override server option
  "autorejoin" (task #12256)
* irc: add option "-auto" for command /connect (task #9340)
* irc: add support of "server-time" capability (task #12255)
* irc: add support of tags in messages
* irc: fix crash on /upgrade (free channels before server data when a server
  is destroyed) (bug #37736)
* irc: fix crash when decoding IRC colors in strings (bug #37704)
* irc: fix refresh of bar item "away" after command /away or /disconnect
* irc: add command /quiet, fix display of messages 728/729 (quiet list, end of
  quiet list) (task #12278)
* irc: add option irc.network.alternate_nick to disable dynamic nick generation
  when all nicks are already in use on server (task #12281)